# qute-marketplace

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
plugins/: compound-engineering-extended-design.md
plugins/claudeception/: plugin.json
plugins/claudeception/.claude-plugin/: plugin.json
plugins/claudeception/hooks/: hooks.json
plugins/claudeception/scripts/: claudeception_activator.sh
plugins/context-management/: README.md  plugin.json
plugins/context-management/.claude-plugin/: plugin.json
plugins/context-management/hooks/: hooks.json
plugins/datasets-guide/: README.md  plugin.json
plugins/documentation-guide/: README.md  plugin.json
plugins/forced-eval/: README.md  plugin.json
plugins/llm-council/: README.md  plugin.json  pyproject.toml
plugins/llm-council/.claude-plugin/: plugin.json
plugins/llm-council/commands/: ask.md  brainstorm.md  debate.md  decide.md
plugins/llm-council/config/: .env.example  council.json  models.json
plugins/llm-council/hooks/: enforce_council_script.py  hooks.json
plugins/llm-council/scripts/: council_ask.py  council_brainstorm.py  council_debate.py  council_decide.py  council_engine.py
plugins/llm-council/skills/llm-council/: SKILL.md
plugins/llm-external-review/: README.md  plugin.json
plugins/notifications/: README.md  plugin.json
plugins/research-workflow/: README.md  plugin.json
plugins/workflow-plugin/: .gitignore  README.md  plugin.json
scripts/: build.py  create.py  fetch.py  update.py
templates/plugin-template/: README.md  plugin.json
(+63 files in other folders)
