[project]
name = "llm-council"
version = "0.1.0"
description = "Multi-model LLM council for diverse AI perspectives"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
council-ask = "scripts.council_ask:main"
council-debate = "scripts.council_debate:main"
council-decide = "scripts.council_decide:main"
council-brainstorm = "scripts.council_brainstorm:main"
